Fixed alignment

--- a/DrumKit/Style.css
+++ b/DrumKit/Style.css
@@ -32,7 +32,7 @@ kbd {
 }
 
 .sound {
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
     color: #ffc600;
